<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">条码检测系统</string>
    <string name="action_settings">Settings</string>
    
    <string name="maintitle">yctek test</string>
    <string name="mainled">Led</string>
    <string name="mainbeep">Beep</string>
    <string name="mainbacklight">Backlight</string>
    <string name="mainID">BoardID</string>
    <string name="updatelogo">UpdateLogo</string>
    <string name="mainserial">Serial</string>
    <string name="main2boardid">BoardID</string>
    <string name="maine2prom">E2PROM</string>
    <string name="maintimeset">time set</string>
    <string name="mainLauncher">StartLauncher</string>
    <string name="mainCalibrate">Calibrate</string>
    <string name="mainNetwork">SetNetwork</string>
    <string name="main2network">Network Setting</string>
    <string name="main2networkIP"     >IP     ：</string>
    <string name="main2networkSubMask">SubMask：</string>
    <string name="main2networkGateWay">GateWay：</string>
    <string name="main2networkDNS1"    >DNS1   ：</string>
    <string name="main2networkDNS2"    >DNS2   ：</string>
    <string name="mainApplyNet"    >Apply</string>
    <string name="maingetmac"    >GetMac</string>
    <string name="mainrandommac"    >RandomMac</string>
    <string name="mainsetmac"    >SetMac</string>
    
    
    <string name="mainad">ADC</string>    
    <string name="main2adtitle">AD</string>
    <string name="mainReadAd1">ReadAD1</string>
    <string name="mainReadAd2">ReadAD2</string>
    <string name="mainReadAd3">ReadAD3</string>
    <string name="mainReadAd4">ReadAD4</string>
    
     <string name="mainAutoBacklightStart">StartAutoBacklight</string>
     <string name="mainAutoBacklightStop">StopAutoBacklight</string>
    
    <string name="maincan">Can</string>  
    
    <string name="main2backlighttitle">Backlight Setting</string>
    
    <string name="main2e2promtitle">E2prom Setting</string>
    <string name="main2e2promwrite">write e2prom</string>
    <string name="main2e2promread">read e2prom</string>
    
    <string name="main2wdogtitle">Watch Dog Setting</string>
    <string name="main2wdogsettime">Set Time</string>
	<string name="main2wdogstart">StartWdog</string>
	<string name="main2wdogstop">StopWdog</string>
	<string name="main2wdogfeed">FeedWdog</string>
	
	<string name="main2serialtitle">serial test</string>
	<string name="main2serialrecetext">receive</string>
	<string name="main2serialsendtext">send</string>
	<string name="main2serialsendbutton">send</string>
	<string name="main2serialnumber">port</string>
	<string name="main2serialbaute">baute</string>
	<string name="main2serialparitybit">parity</string>
	<string name="main2serialdatabit">data</string>
	<string name="main2serialstopbit">stop</string>
	<string name="main2serialopenbutton">open</string>
	<string name="main2serialclosebutton">close</string>
	<string name="main2serialclearrecebutton">clear rece</string>
	<string name="main2serialclearrecenumber">ClearReceNum</string>
	<string name="main2serialclearsendnumber">ClearSendNum</string>
	<string name="main2serialhex">Hex</string>	
	<string name="main2serialsendhex">Hex Send</string>
	<string name="main2serialrecehex">Hex Rece</string>
	
	
	<string name="main2iotitle">IO Input Output Test</string>
	<string name="main2iooutputh">IO Set High Level</string>
	<string name="main2iooutputl">IO Set Low Level</string>
	<string name="main2ioreadinput">Read Input IO</string>
	<string name="main2iopollmode">Poll mode</string>
	<string name="main2iointrmode">Intr mode</string>
	
	<string name="mainhideshowbar">hideshowbar</string>
	
	<drawable name="bluecolor">#FF297AEF</drawable>
    <drawable name="redcolor">#FFBC1C48</drawable>
    <drawable name="greencolor">#FF009017</drawable>
    <drawable name="purplecolor">#FF5434AF</drawable>
    <drawable name="yellowcolor">#FFD9532D</drawable>
    
    <string name="udisklogo">Udisk Logo</string> 
    <string name="sdcardlogo">Sdcard Logo</string> 
    <string name="writelogo">Write Logo</string> 
    <string name="openlogo">Open Logo path</string> 
    
    <string name="udiskanimationlogo">Udisk Animation Logo</string> 
    <string name="sdcardanimationlogo">Sdcard Animation Logo</string> 
    <string name="writeanimationlogo">Write Animation Logo</string> 
</resources>
