<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:rowCount="4"
    android:columnCount="2" >
　　<Button
        android:id="@+id/uniqueid"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainID"
        android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
	    android:background="@drawable/redcolorx"/>
　　<Button
        android:id="@+id/beep"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainbeep"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/greencolorx"/>
　　　<Button
        android:id="@+id/serial"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainserial"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/bluecolorx"/>
　　<Button
        android:id="@+id/statusled"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainled"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/yellowcolorx"/>
　　<Button
        android:id="@+id/updatelogo"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/updatelogo"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/redcolorx"/>
　　<Button
        android:id="@+id/timesets"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="Reserve"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/bluecolorx"/>
　　<Button
        android:id="@+id/returnlauncher"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainLauncher"
        android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/purplecolorx"/>
　　<Button
        android:id="@+id/hideshowbar"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mainhideshowbar"
         android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/redcolorx"/>

</GridLayout>