<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
  <LinearLayout
         android:id="@+id/linearLayoutSendReceText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
	     android:orientation="horizontal" >   
    <LinearLayout
         android:id="@+id/linearLayoutleft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
	     android:orientation="vertical" 
	     >

	     <Spinner
	        android:id="@+id/spinnerComNumber"
	        android:layout_width="200px"
	        android:layout_height="50px" 
	        android:layout_margin="10px"
	       />
	  
	     <Spinner
	        android:id="@+id/spinnerbaute"
	        android:layout_width="200px"
	        android:layout_height="50px" 
	        android:layout_margin="10px"
	        />
	     
	      <Spinner
	        android:id="@+id/spinnerparitybit"
	        android:layout_width="200px"
	        android:layout_height="50px" 
	        android:layout_margin="10px"
	        />
	     
	       <Spinner
	        android:id="@+id/spinnerdatabit"
	        android:layout_width="200px"
	        android:layout_height="50px" 
	        android:layout_margin="10px"
	        />
     
	        <Spinner
	        android:id="@+id/spinnerstopbit"
	        android:layout_width="200px"
	        android:layout_height="50px" 
	        android:layout_margin="10px"
	        />
	    
		    <Button
		         android:id="@+id/buttonOpen"
		         android:layout_width="200px"
		         android:layout_height="50px"       
		         android:layout_margin="10px"
		         android:text="@string/main2serialopenbutton" />
			<Button
		         android:id="@+id/buttonSend"
		         android:layout_width="200px"
		         android:layout_height="50px"        
				 android:layout_margin="10px"
		         android:text="@string/main2serialsendbutton" />
	
	</LinearLayout>
	
     <LinearLayout
         android:id="@+id/linearLayoutmiddle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"       	 
	     android:orientation="vertical" 
	     android:layout_weight="1">		
         
			<EditText
			    android:id="@+id/editTextRece"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:ems="10"
			    android:inputType="textMultiLine"
			    android:layout_weight="1" >
			
			    <requestFocus />
			</EditText>
			   <EditText
			    android:id="@+id/editTextSend"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:ems="10"
			    android:inputType="textMultiLine"
			    android:layout_weight="1" >
			
			    <requestFocus />
			</EditText>    
	
	</LinearLayout>
	 <LinearLayout
         android:id="@+id/linearLayoutright"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"       	 
	     android:orientation="vertical" >	        

			
			<CheckBox
			            android:id="@+id/hexcheckboxrece"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="20sp"
			            android:layout_margin="30px"   
			            android:text="@string/main2serialrecehex" />
			<Button
				        android:id="@+id/buttonClearReceText"
				        android:layout_width="120px"
				        android:layout_height="50px"        
				        android:layout_margin="30px"
				        android:text="@string/main2serialclearrecebutton" />
			<CheckBox
			            android:id="@+id/hexcheckboxsend"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="20sp"
			            android:layout_margin="30px"     
			            android:text="@string/main2serialsendhex" />	
	
	</LinearLayout>
</LinearLayout>
</RelativeLayout>
